package gevvent.service.event.invite;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;

message Request {
	optional string eventID = 1 [(gogoproto.nullable) = false];
	optional string userID = 2 [(gogoproto.nullable) = false];
	optional string invitedUser = 3 [(gogoproto.nullable) = false];
}

message Response {
}
